--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,9 @@ include_directories(${PostgreSQL_INCLUDE_DIRS})
 find_package(PostgresDriver REQUIRED)
 include_directories(${POSTGRESDRIVERS_INCLUDE_DIRS})
 
+find_package(PgArrayHstoreParser REQUIRED)
+include_directories(${PGARRAYHSTOREPARSER_INCLUDE_DIRS})
+
 
 #-----------------------------------------------------------------------------
 #
