deduplicate code at ItemTypeConversionImpl, add test for this class

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,3 +20,9 @@ target_link_libraries(test_bbox_conversion testlib ${PROJ_LIBRARY})
 add_test(NAME test_bbox_conversion
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     COMMAND test_bbox_conversion)
+
+add_executable(test_item_type_conversion t/test_item_type_conversion.cpp)
+target_link_libraries(test_item_type_conversion testlib ${PROJ_LIBRARY})
+add_test(NAME test_item_type_conversion
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND test_item_type_conversion)
