enable building documentation with Doxygen, remove unnecessary methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,15 @@ add_subdirectory(test)
 
 #-----------------------------------------------------------------------------
 #
+#  Documentation
+#
+#-----------------------------------------------------------------------------
+
+add_subdirectory(doc)
+
+
+#-----------------------------------------------------------------------------
+#
 #  Optional "cppcheck" target that checks C++ code
 #
 #-----------------------------------------------------------------------------
